# pi-ci

./: .travis.yml  CMakeLists.txt  README.rst  appveyor.yml  main.py
ci/appveyor/: install.bat
