cmake_minimum_required(VERSION 3.3)
project(pi_ci)

set(CMAKE_CXX_STANDARD 14)

add_executable(pi_ci main.cpp)

if ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "AMD64")
    set (CMAKE_SIZEOF_VOID_P 8)

    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS TRUE)
    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB32_PATHS FALSE)
elseif ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "X86")
    set (CMAKE_SIZEOF_VOID_P 4)

    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS FALSE)
    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB32_PATHS TRUE)

    if (GCC)
        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
        set (CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -m32")
    endif ()
else ()
    message (FATAL_ERROR "Unsupported CPU: ${CMAKE_SYSTEM_PROCESSOR}")
endif ()
